# flaggie

./: README.md  pyproject.toml  tox.ini
flagger/: __init__.py  __main__.py  app.py  cli.py  config_files.py  models.py  operations.py  package_manager.py  privilege.py
flaggie/: __init__.py  __main__.py  config.py  pm.py
test/: test_config.py  test_main.py
tests/: __init__.py  test_app.py  test_cli.py  test_config_files.py  test_operations.py  test_package_manager.py  test_privilege.py
