[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flagger"
authors = [{name = "Gurov"}]
license = {file = "COPYING"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
package-manager = [
    "gentoopm >= 0.5",
]
test = [
    "pytest",
]

[project.scripts]
flagger = "flagger.__main__:main"

[project.urls]
Homepage = "https://github.com/Gur0v/flagger/"

[tool.flit.module]
name = "flagger"

[tool.flit.sdist]
include = [
    "tests",
    "tox.ini",
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "gentoopm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--log-level=debug"
testpaths = [
    "tests",
]
